k3s-project/gzip-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: qifu4-gzip-middleware
  namespace: qifu4 # 統一放在 qifu4
spec:
  compress: {}
