k3s-project/kube-vip-ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kube-vip-ds
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: kube-vip
  template:
    metadata:
      labels:
        app: kube-vip
    spec:
      hostNetwork: true
      serviceAccountName: kube-vip
      tolerations:
      - operator: Exists
      containers:
      - name: kube-vip
        image: ghcr.io/kube-vip/kube-vip:v0.8.2
        args:
        - manager
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
            - NET_RAW
