k3s-project/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qifu4-backend-service
  namespace: qifu4
  # 這裡乾乾淨淨，絕對不放任何有毒的 middlewares 標籤！
spec:
  selector:
    app: qifu4-backend
  ports:
  - port: 8088
    targetPort: 8088
  type: ClusterIP
