k3s-project/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: qifu4-frontend-service
  namespace: qifu4

spec:
  selector:
    app: qifu4-frontend

  ports:
  - port: 8077
    targetPort: 8077

  type: ClusterIP
